--- a/ProyectoFinal_ActivosFijos/bin/ProyectoFinal_ActivosFijos.dll.config
+++ b/ProyectoFinal_ActivosFijos/bin/ProyectoFinal_ActivosFijos.dll.config
@@ -83,10 +83,16 @@
 
 	<!--Conexiones-->
 
-	<!--Vale-->
+	<!--Vale
+	<connectionStrings><add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models..csdl|res://*/Models..ssdl|res://*/Models..msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2DBD0NG;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+-->
+<!--Esteban W-->
+
 	<connectionStrings>
-		<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2DBD0NG;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EWM0803-PC0803;initial catalog=ActivosFijosBD;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
+
+
 
 
 	<entityFramework>
@@ -99,4 +105,7 @@
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
+
+
+
 </configuration>
