--- a/ProyectoFinal_ActivosFijos/Web.config
+++ b/ProyectoFinal_ActivosFijos/Web.config
@@ -83,10 +83,18 @@
 
 	<!--Conexiones-->
 
-	<!--Vale-->
+	<!--Vale
 	<connectionStrings>
 		<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2DBD0NG;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
+
+-->
+	<!--Esteban-->
+	
+	<connectionStrings>
+		<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=EWM0803-PC0803;initial catalog=ActivosFijosBD;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
+
 
 
 	<entityFramework>
