--- a/ProyectoFinal_ActivosFijos/ProyectoFinal_ActivosFijos.csproj
+++ b/ProyectoFinal_ActivosFijos/ProyectoFinal_ActivosFijos.csproj
@@ -277,6 +277,7 @@
     <Content Include="Views\Shared\_ClientLayout.cshtml" />
     <Content Include="Views\Comprador\AccesoBloqueado.cshtml" />
     <Content Include="Views\Admin\AccesoBloqueado.cshtml" />
+    <Content Include="Views\Repuesto\MostrarRepuestoIndividual.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
