--- a/ProyectoFinal_ActivosFijos/Web.config
+++ b/ProyectoFinal_ActivosFijos/Web.config
@@ -85,9 +85,12 @@
 </connectionStrings>-->
 	
 	<!--Alessandro-->
-	 <connectionStrings>
+	<!-- <connectionStrings>
 	<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\AlessandroRoverssi;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings> 
+	</connectionStrings> -->
+	
+	<!--Mariana-->
+	
 	
 		
   <entityFramework>
