--- a/ProyectoFinal_ActivosFijos/bin/ProyectoFinal_ActivosFijos.dll.config
+++ b/ProyectoFinal_ActivosFijos/bin/ProyectoFinal_ActivosFijos.dll.config
@@ -85,9 +85,12 @@
 </connectionStrings>-->
 	
 	<!--Alessandro-->
-	 <connectionStrings>
+	<!-- <connectionStrings>
 	<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\AlessandroRoverssi;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings> 
+	</connectionStrings> -->
+	
+	<!--Mariana-->
+	<connectionStrings><add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Bats;initial catalog=ActivosFijosDB;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 	
 		
   <entityFramework>
