--- a/ProyectoFinal_ActivosFijos/Web.config
+++ b/ProyectoFinal_ActivosFijos/Web.config
@@ -75,9 +75,9 @@
   <!--Conexiones-->
 	
   <!--Vale-->
-	<connectionStrings>
+	<!--<connectionStrings>
     <add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2DBD0NG;initial catalog=ActivosFijosDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  </connectionStrings>-->
 	
   <!--Esteban-->
   <!-- <connectionStrings>
@@ -88,6 +88,11 @@
 	<!--<connectionStrings>
 <add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\AlessandroRoverssi;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings> -->
+	
+	<!--Mariana-->
+	<connectionStrings>
+		<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Bats\MSSQLSERVER01;initial catalog=ActivosFijosDB;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 	
 		
   <entityFramework>
