--- a/ProyectoFinal_ActivosFijos/bin/ProyectoFinal_ActivosFijos.dll.config
+++ b/ProyectoFinal_ActivosFijos/bin/ProyectoFinal_ActivosFijos.dll.config
@@ -76,7 +76,7 @@
 	
   <!--Vale-->
 	<!--<connectionStrings>
-     <add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2DBD0NG;initial catalog=ActivosFijosDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2DBD0NG;initial catalog=ActivosFijosDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
 	
   <!--Esteban-->
@@ -85,12 +85,9 @@
 </connectionStrings>-->
 	
 	<!--Alessandro-->
-	<!-- <connectionStrings>
-	<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\AlessandroRoverssi;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings> -->
-	
-	<!--Mariana-->
-	<connectionStrings><add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Bats;initial catalog=ActivosFijosDB;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	<connectionStrings>
+<add name="ActivosFijosBDEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\AlessandroRoverssi;initial catalog=ActivosFijosBD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings> 
 	
 		
   <entityFramework>
